feat: add the pubsub websocket
